# lenient-codegen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
lenient/: Cargo.toml
lenient/src/: lib.rs
lenient_derive/: Cargo.toml  README.md
lenient_derive/src/: lib.rs
lenient_test/: Cargo.toml
lenient_test/src/: main.rs
