[package]
name = "lenient_test"
version = "0.1.0"
edition = "2021"
description = "Binary test crate for validating the lenient deserialization system."
authors = ["Masoumeh Ebhami <masumeebhami@gmail.com>"]
license = "MIT"
repository = "https://github.com/masumeebhami/lenient-codegen"
readme = "../README.md"
keywords = ["serde", "deserialization", "lenient", "error-handling"]
categories = ["parsing", "serialization", "config"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

# Local path dependency to your main lenient crate
lenient = { path = "../lenient" }
lenient_derive = { path = "../lenient_derive" }